2005-07-13 22:51 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/GormButtonEditor.m: Corrected issue with 
	button editing.  bug #13756.

2005-07-13 09:01 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Corrected problem selecting NSObject 
	in browser when it's selected in the outline.

2005-07-13 02:17 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Changed code in selectClass:editClass:
	to use the methods from the GormClassManager as appropriate.  Removed
	do.. while construct since it did the same thing as 
	allSuperClassesOf in GormClassManager.
	* GormCore/GormClassManager.[hm]: Added new method isRootClass: which
	returns true if the argument is a root class.  Also replaced
	references to @"NSObject" in a number of places with calls to this
	method.  This makes the code more generic.
	* GormCore/GormPalettesManager.m: Added check in 
	importClasses:withDictionary: which should allow loading palettes
	which define root level classes.

2005-07-12  fabien  <fabien@sonappart.net>

	* GormCore/GormClassEditor.m: Fix OutlineView / BrowserView switch 
	Add some warnings.
	Greg please check the code.
	You will need to change it when GormClassManager will
	change ( for root object )
	* Palettes/3Containers/inspector.m : Add minimum column size for 
	NSBrowser
	* Palettes/3Containers/GormNSBrowserInspector.gorm : Ditto

2005-07-11  fabien  <fabien@sonappart.net>

	* Palettes/1Windows/ControlsPalette.gorm : 
	Fix bad layout when doing a matrix of NSForms.
	* Documentation : Gorm.texi, Update documentation
	* GormCore/GormInspectorsManager.m : make setInitialFirstResponder working with inspector
	* Palettes/0Menus/GormMenuInspectors.gorm : set initialFirstResponder
	* Palettes/0Menus/GormMenuItemAttributesInspector.gorm : Ditto
	* Palettes/1Windows/GormNSWindowSizeInspector.gorm : Ditto 
	* Palettes/2Controls/GormNSButtonInspector.gorm : Ditto